# poc_proto

./: .gitignore
go/: go.mod  main.go
js/: package-lock.json  package.json
js/src/: index.ts  testt.ts
proto/: testt.proto
rust/: Cargo.toml  build.rs
rust/src/: main.rs  mod.rs  test.rs.old  testt.rs
