[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-types = "0.11"
#serde = {version = "1.0", features = ["derive"]}
#serde_json = "1.0"
#serde_repr = "0.1"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"

[build-dependencies]
protobuf-codegen = "3.2.0"
#prost-build = "0.11"